sas-core/main/default/objects/MessagingSession/fields/Chain_In_Conversation__c.field-meta.xml
<CustomField>
    <fullName>Chain_In_Conversation__c</fullName>
    <defaultValue>0</defaultValue>
    <description>This field is to help doing reporting and understand the current chain of a conversation</description>
    <label>Chain In Conversation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>