sas-core/main/default/objects/MessagingSession/fields/Consent__c.field-meta.xml
<CustomField>
    <fullName>Consent__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Consent</label>
    <length>10</length>
    <type>Text</type>
</CustomField>