sas-core/main/default/objects/MessagingSession/fields/Consent_String__c.field-meta.xml
<CustomField>
    <fullName>Consent_String__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Consent String</label>
    <length>10</length>
    <type>Text</type>
</CustomField>