sas-core/main/default/objects/MessagingSession/fields/Directly_Routed_To_Agent__c.field-meta.xml
<CustomField>
    <fullName>Directly_Routed_To_Agent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This will be marked as true if the agent was re-assigned a previous chat in a new message session</description>
    <label>Directly Routed To Agent</label>
    <type>Checkbox</type>
</CustomField>