sas-core/main/default/objects/MessagingSession/fields/EBNumber__c.field-meta.xml
<CustomField>
    <fullName>EBNumber__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>EBNumber</label>
    <length>10</length>
    <type>Text</type>
</CustomField>