sas-core/main/default/objects/MessagingSession/fields/Issue_Summary__c.field-meta.xml
<CustomField>
    <fullName>Issue_Summary__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Issue Summary</label>
    <length>100</length>
    <type>Text</type>
</CustomField>