sas-core/main/default/objects/MessagingSession/fields/Language__c.field-meta.xml
<CustomField>
    <fullName>Language__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Language</label>
    <length>5</length>
    <type>Text</type>
</CustomField>