sas-core/main/default/objects/MessagingSession/fields/Netomi_Conv_ID__c.field-meta.xml
<CustomField>
    <fullName>Netomi_Conv_ID__c</fullName>
    <description>External identifier for Netomi</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>External identifier for Netomi</inlineHelpText>
    <label>Netomi_Conv_ID</label>
    <length>64</length>
    <type>Text</type>
</CustomField>