sas-core/main/default/objects/MessagingSession/fields/Queue__c.field-meta.xml
<CustomField>
    <fullName>Queue__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Queue</label>
    <length>50</length>
    <type>Text</type>
</CustomField>