sas-core/main/default/objects/MessagingSession/fields/SMS_Type__c.field-meta.xml
<CustomField>
    <fullName>SMS_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SMS Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>