sas-core/main/default/objects/MessagingSession/fields/Summary_of_the_issue__c.field-meta.xml
<CustomField>
    <fullName>Summary_of_the_issue__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Summary Of The Issue</label>
    <length>100</length>
    <type>Text</type>
</CustomField>