sas-core/main/default/objects/MessagingSession/fields/Survey_Accepted__c.field-meta.xml
<CustomField>
    <fullName>Survey_Accepted__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Survey Accepted</label>
    <length>5</length>
    <type>Text</type>
</CustomField>