sas-core/main/default/objects/MessagingSession/fields/Survey_Email__c.field-meta.xml
<CustomField>
    <fullName>Survey_Email__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Survey Email</label>
    <length>100</length>
    <type>Text</type>
</CustomField>