sas-core/main/default/objects/MessagingSession/fields/SurveyLink__c.field-meta.xml
<CustomField>
    <fullName>SurveyLink__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Survey Link</label>
    <type>Url</type>
</CustomField>